[gd_scene load_steps=5 format=2]

[ext_resource path="res://Scripts/LogoParade.gd" type="Script" id=1]
[ext_resource path="res://Scripts/AutoResize_ColorRect.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Logos/LH_LogoSequence/LH_LogoSequence.tres" type="SpriteFrames" id=3]
[ext_resource path="res://UI/Fonts/Quando_Regular.tres" type="DynamicFont" id=4]

[node name="CanvasLayer" type="CanvasLayer"]
follow_viewport_enable = true

[node name="LogoParade" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="StartTimer" type="Timer" parent="LogoParade"]
wait_time = 0.3
one_shot = true

[node name="FreezeTimer" type="Timer" parent="LogoParade"]
wait_time = 1.6
one_shot = true

[node name="ColorRect" type="ColorRect" parent="LogoParade"]
show_behind_parent = true
margin_right = 1920.0
margin_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )
script = ExtResource( 2 )

[node name="Name" type="Label" parent="LogoParade"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -251.5
margin_top = -242.0
margin_right = 251.5
margin_bottom = -156.0
custom_fonts/font = ExtResource( 4 )
text = "Logan Hardin"

[node name="CenterContainer" type="CenterContainer" parent="LogoParade"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
size_flags_horizontal = 2
size_flags_vertical = 2
__meta__ = {
"_edit_lock_": true
}

[node name="LogoAnim" type="AnimatedSprite" parent="LogoParade/CenterContainer"]
position = Vector2( 960, 460 )
frames = ExtResource( 3 )

[connection signal="timeout" from="LogoParade/StartTimer" to="LogoParade" method="_on_StartTimer_timeout"]
[connection signal="timeout" from="LogoParade/FreezeTimer" to="LogoParade" method="_on_FreezeTimer_timeout"]
[connection signal="animation_finished" from="LogoParade/CenterContainer/LogoAnim" to="LogoParade" method="_on_LogoAnim_finished"]
